UI changes to createevent and event page

--- a/create_event.css
+++ b/create_event.css
@@ -7,6 +7,18 @@
 	color:white
 }
 
+#explore:hover{
+background-color:black;
+
+	
+
+}
+
+#homepage:hover{
+background-color:black;
+
+}
+
 .create_button{
 	color:green;
 	background-color:white;
