--- a/src/main/resources/static/eventpage.css
+++ b/src/main/resources/static/eventpage.css
@@ -1,16 +1,35 @@
 #abc{
-color:orange !important;
+color: !important;
 }
 
+.top-nav-links{
+	color:black !important;
+}
+
+.top-nav-links:hover{
+	color:white !important;
+}
 .img-responsive{
 	height:700px !important;
 	position:absolute;
 	display:block;
 }
 
+#explore:hover{
+background-color:black !important;
+color:black !important;
+
+}
+
+#homepage:hover,#createevent:hover{
+background-color:black;
+
+	
+
+}
 .footer{
 	height:20%;	
-	top:30%;	
+	top:20%;	
 	text-align:center;
 	position:relative;
 	background-color:#534E4E;
@@ -21,12 +40,42 @@ color:orange !important;
 	width:60%;left:20%;position:relative;
 }
 
-.register_button{
-	width:60%;left:20%;height:40px !important;position:relative;background-color:#3B98C7;color:white;border:1px solid #3B98C7;border-radius:10px;
+.chat-button{
+	height:30px;width:70px;
+	color:white;
+	background-color:navy;
+	border:2px solid navy;
+	border-radius:15px;
 }
 
-.register_button:hover{
+.chat-button:hover{
+	color:navy;
 	background-color:white;
-	color:#3B98C7;
-	box-shadow:2px 2px 2px grey;
-	}
+	border:2px solid navy;
+	border-radius:15px;
+		box-shadow:2px 2px 2px grey;
+
+}
+
+.register_button{
+	color:green;
+	background-color:white;
+	border: 2px solid green;
+	border-radius:3px;
+	height:40px;
+	width:80%;
+	left:10%;
+	position:relative;
+/*	width:60%;left:20%;height:40px !important;position:relative;background-color:#3B98C7;color:white;border:1px solid #3B98C7;border-radius:10px;
+*/}
+
+.register_button:hover{
+	background-color:green;
+	color:white;
+	box-shadow:2px 2px 2px 2px grey;
+	
+}
+
+.links:hover{
+	color:white;
+}
