--- a/src/main/resources/templates/forgotPassworderror.html
+++ b/src/main/resources/templates/forgotPassworderror.html
@@ -37,22 +37,22 @@
                         <div class="panel-body">
 
 
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
 
-                                        <form th:action="@{/sendCode}" autocomplete="off" method="post">
-                                            <div th:if="${param.error}"  class="alert alert-error">
-                                                Code has expired. Please request for a new code
-                                            </div>
+                                    <form th:action="@{/sendCode}" autocomplete="off" method="post">
+                                        <label>Code has expired. Please request for a new code
+                                        </label>
+                                        <br />
                                         <input id="email" name="email" placeholder="email address" class="form-control"  type="email" />
-                                            <div class="form-group">
-                                        <input name="sendCode" placeholder="Send recovery code" type="submit" />
-                                            </div>
-                                        </form>
+                                        <div class="form-group">
+                                            <input name="sendCode" placeholder="Send recovery code" type="submit" />
+                                        </div>
+                                    </form>
 
-                                    </div>
-                                    <form th:action="@{/forgotPass}" id="register-form" role="form" autocomplete="off" class="form" method="post">
+                                </div>
+                                <form th:action="@{/forgotPass}" id="register-form" role="form" autocomplete="off" class="form" method="post">
 
                                     <div class="input-group">
                                         <label>Enter code received on email</label>
@@ -60,16 +60,16 @@
                                         <input id="password" name="password" placeholder="password" class="form-control"  type="password" />
 
                                     </div>
-                                        <div class="form-group">
-                                            <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit" />
-                                        </div>
-                                    </form>
-                                </div>
+                                    <div class="form-group">
+                                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit" />
+                                    </div>
+                                </form>
+                            </div>
 
 
 
 
-                                <input type="hidden" class="hide" name="token" id="token" value="" />
+                            <input type="hidden" class="hide" name="token" id="token" value="" />
 
 
                         </div>
