--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -65,7 +65,7 @@ body{background-color:#F0EDED;}
     <div th:if="${param.error}" class="alert alert-error">
         Invalid username or password.
     </div>
-	<div class="col-sm-4"><h5><label class="" for="email">Username</label></h5></div>
+	<div class="col-sm-4"><h5><label class="" for="email">Email</label></h5></div>
 	<div class="col-sm-8">
         <input type="email" name="email" placeholder="" class="form-username form-control" id="email" required="required" />
 	</div>
