finally integrated with vanessa
finally max

--- a/src/main/resources/static/css/admin_profile.css
+++ b/src/main/resources/static/css/admin_profile.css
@@ -7,38 +7,55 @@
 	color:white
 }
 #live_events{
-	height:45px;
+
 	background-color:green;
 	color:white;
 }
 
 #pen_events{
-	height:45px;
+
 	background-color:orange;
 	color:white;
 }
 
 
 #users_count{
-	height:50px;;
-	width:50%;
-	background-color:darkslategrey;
-	color:white;
+
+	background-color:white;
+	color:black;
 	text-align:left;
 }
 
-#live_events:hover,#pen_events:hover,#users_count:hover{
+#org_count{
+	background-color:white;
+	color:black;
+	text-align:left;
+}
+
+#live_events:hover,#pen_events:hover{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	
+}
+#users_count:hover,#org_count:hover
+{
+	background-color:lightgrey;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	
 }
 
 .abcd
 {
 	background-color:lightgrey;
-	color:darkslategrey;
+	color:black;
 }
 
 .abcd:hover{
 	    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		background-color:grey;
 
 	
+}
+
+.app_buttons:hover{
+
 }
