--- a/src/main/resources/templates/create_event.html
+++ b/src/main/resources/templates/create_event.html
@@ -34,14 +34,6 @@
 	<ul class="nav navbar-nav" id="explore">
       <li><a class="top-nav-links" href="search_events.html" style="">Explore Events</a></li>
     </ul>
-	<!--
-    <form class="navbar-form navbar-left" action="">
-      <div class="form-group">
-        <input type="text" class="form-control" style="text-align:center;" placeholder="search for events!">
-      </div>	
-      <button type="submit" class="btn btn-default" style="height:4.5% !important;width:15%!important;position:relative"><span class="glyphicon glyphicon-search"></span></button>
-    
-	</form>-->
 		<ul class="nav navbar-nav navbar-right">
       <li><a href="#" style="">Sign Out</a></li>
     </ul>
@@ -61,36 +53,36 @@
 <h2>create your event!</h2>
 </div><br>
 
-<form action="saveEvent" th:action="@{/addnewevent}" th:object="${command}" method="post">
+<form action="saveEvent" enctype="multipart/form-data" th:action="@{/saveEvent}" th:object="${event}" method="post">
 
 <div class="row" style="">
 <h4>Event Name</h4>
 </div>
 <div class="row">
-<input type="text" class="form-control" name="eventTitle" id="event_name" th:field="*{event_name}">
+<input type="text" class="form-control" name="eventTitle" id="event_name" th:field="*{eventTitle}">
 </div><br>
 <div class="row" style="">
  <h4><span class="glyphicon glyphicon-map-marker" style="color:#2D80DF"></span>Location</h4>
 </div>
 <div class="row">
-<input type="text" class="form-control" name="location" id="event_location">
+<input type="text" class="form-control" name="location" id="event_location" th:field="*{location}">
 </div><br>
 <div class="row" style="">
 <h4><span class="glyphicon glyphicon-calendar" style="color:#2D80DF"></span> Details</h4></div>
 <div class="row">
 <div class="col-sm-2"><h5>Start Time</h5></div>
 <div class="col-sm-5" style="text-align:left">
-<input type="date" class="form-control" name="startDate" style="width:50%;" id="start_date">
+<input type="date" class="form-control" name="" style="width:50%;" id="start_date" th:field="*{startDate}">
 </div>
 <div class="col-sm-5">
-	<input type="time" class="form-control" style="width:50%;" id="start_time">
+	<input type="time" class="form-control" style="width:50%;" id="start_time" th:field="*{startDate}">
 </div>
 </div>
 <br>
 <div class="row">
 <div class="col-sm-2"><h5>End Time</h5></div>
 <div class="col-sm-5" style="text-align:left">
-<input type="date" class="form-control" style="width:50%;" name="endDate" id="end_date">
+<input type="date" class="form-control" style="width:50%;" name="" id="end_date" th:field="*{endDate}">
 </div>
 <div class="col-sm-5">
 	<input type="time" class="form-control" style="width:50%;" id="end_time">
@@ -108,45 +100,18 @@
     </select>
 	</div>
 </div>
-<!--
-<div class="row" style="">
-<span class="glyphicon glyphicon-calendar" style="color:#2D80DF"></span> Date</div>
-<div class="row" style="width:50%;"><input type="date" class="form-control" style="width:100%;" id="usr"></div>
-<br>
-
-<div class="row">
-	<div class="col-sm-4" style="background-color:">
-	<div class="row">STARTS</div>
-	<div class="row"><input type="time" class="form-control" style="width:75%;" id="usr"></div>
-	</div>
-	<div class="col-sm-4" style="background-color:">
-	<div class="row">ENDS</div>
-	<div class="row"><input type="time" class="form-control" style="width:75%;" id="usr"></div>
-	</div>
-</div>
-
--->
-<!--
-<div class="row">
-<div class="col-sm-6">
-<input type="time" class="form-control" style="width:30%;" id="usr">
-</div>
-<div class="col-sm-6">
-<input type="time" class="form-control" style="width:30%;" id="usr">
-</div>
-</div>-->
 <br>
 <div class="row">
 <h4><span class="glyphicon glyphicon-file" style="color:#2D80DF"></span> Upload an Image</h4><small>Image must be of dimensions 280 X 140</small></div>
 <div class="row">
-    <input type="file" class="form-control-file" id="event_image">
+    <input type="file" name="file" class="form-control-file" id="event_image">
 </div>
 <div class="row" ><br>
 <h4>Description</h4>
 <small>Describe the event(200 words max)</small>
 </div>
 <div class="row">
-<textarea name="description" id="event_desc" style="width:75%;height:35%;resize:none;">
+<textarea name="description" id="event_desc" style="width:75%;height:35%;resize:none;" th:field="*{description}">
 </textarea>
 </div><br><br>
 <div class="row" style="background-color:white;border-radius:10px;">
@@ -193,7 +158,7 @@ Select a category that best describes the event.
 </div>
 <div class="col-sm-4"></div>
 </div>
-
+</form>
 </div>
 <div class="col-sm-2" style="background-color:">
 </div>
