--- a/src/main/resources/static/css/eventpage.css
+++ b/src/main/resources/static/css/eventpage.css
@@ -41,36 +41,37 @@ background-color:black;
 }
 
 .chat-button{
-	height:30px;width:70px;
+	height:30px;
 	color:white;
-	background-color:navy;
-	border:2px solid navy;
-	border-radius:15px;
+	background-color:#3C9883;
+	border:1px solid #3C9883;
+	border-radius:3px;
 }
 
 .chat-button:hover{
-	color:navy;
+	color:#3C9883;
 	background-color:white;
-	border:2px solid navy;
-	border-radius:15px;
+	border:1px solid #3C9883;
+	border-radius:3px;
 		box-shadow:2px 2px 2px grey;
 
 }
 
 .register_button{
-	color:green;
+	color:#3C6198;
 	background-color:white;
-	border: 2px solid green;
+	border: 2px solid #3C6198;
 	border-radius:3px;
 	height:40px;
-	width:80%;
+	width:100%;
 	left:10%;
 	position:relative;
+	transition:0.5s;
 /*	width:60%;left:20%;height:40px !important;position:relative;background-color:#3B98C7;color:white;border:1px solid #3B98C7;border-radius:10px;
 */}
 
 .register_button:hover{
-	background-color:green;
+	background-color:#3C6198;
 	color:white;
 	box-shadow:2px 2px 2px 2px grey;
 	
@@ -78,4 +79,10 @@ background-color:black;
 
 .links:hover{
 	color:white;
+}
+
+.fancy
+{
+		font-family:"Trebuchet MS", Helvetica, sans-serif;
+
 }
