--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -24,8 +24,19 @@
 </head>
 <body>
 
+<div class="container-fluid" style="background-color:;color:orange;padding:10px;border-bottom:1px solid lightgrey;">
+<div class="row">
+<div class="col-sm-2"><h4 style="color:orange;background-color:white;text-align:center">HoosierEvents</h4></div>
+<!--<div class="col-sm-3"><image src="logo 4.jpg" style="min-width:350px;max-width:300px;max-height:25px;></div>-->
+<div class="col-sm-1"><button class="btn-default xyz" style="color:orange;background-color:white;border:0px;" onclick="javascript:alert('Hello World!')"><h5>Explore</h5></button></div>
+<div class="col-sm-5"><input type="text" class="form-control" id="myInput" placeholder="Search"></div>
+<div class="col-sm-3"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
+<div class="col-sm-1"><button class="btn-default xyz" style="color:orange;background-color:white;border:0px;"><h5>Login</h5></button></div>
+</div>
+</div>
+
 <!-- NAVIGATION BAR -->
-<nav class="navbar navbar-inverse" style="background-color:#AE1616;width:100%" >
+<!--<nav class="navbar navbar-inverse" style="background-color:#AE1616;width:100%" >
   <div class="container-fluid" style="text-align:left">
     <div class="navbar-header">
       <a class="navbar-brand" href="homePage.html" id="abc">HoosierEvents</a>
@@ -42,30 +53,31 @@
     </ul>
 
 	</div>
-</nav>
+</nav>-->
 	
 	
-<div class="container-fluid" style="background-color:;">	
+<div class="container-fluid" style="background-color:lightgrey;">	
 <div class="container" style="width:90%;top:10%;position:relative;background-color:;-bottom:0.5px groove #F4EFFE">
 <div class="row">
 	<!-- IMAGE DIV -->
 	<div class="col-sm-8">
 		<div class="row">
-		<img src="/Users/harishmaruthi/eclipse-workspace/hoosier-events/upload-dir/theatre%202.jpg" id="eventimg" class="" style="width:740px;height:360px;max-height:40%;max-width:100%;">
+		<!--<img src="/Users/harishmaruthi/eclipse-workspace/hoosier-events/upload-dir/theatre%202.jpg" id="eventimg" class="" style="width:100%;height:auto;">-->
+		<img src="concert.jpg" id="eventimg" class="" style="width:100%;height:auto;">
 		</div>
 	</div>
 <br>
 	<!-- event details div -->
 	<div class="col-sm-4" >
 		<div class="headers">
-		<div class="row" ><h3 id="event_title"></h3></div>
+		<div class="row" ><h2 id="event_title"></h2></div>
 		<div class="row" ><h5 id="event_date"></h5></div>
 		<div class="row" ><h5 id="event_location"></h5></div>
 		<div class="row" style="color:#726868"><h5>10am-3pm</h5></div>
-		<div class="row" style="color:green"><h5>TICKETS:Available</h5></div>
+		<div class="row" style="color:#3C6198"><h5>TICKETS:Available</h5></div>
 		<br><br><br>
 		</div>
-		<div class="row" style="bottom:10%;position:relative"><button class="btn-block register_button" onClick="NewPage()"><h5>REGISTER<h5></button></div></a>
+		<div class="row" style="bottom:10%;position:relative"><div class="col-sm-12"><button class="btn-block register_button" onClick="NewPage()"><h5>REGISTER<h5></button></div></div>
 
 	</div>
 
@@ -76,7 +88,7 @@
 
 <!-- DESCRIPTION AND DETAILS DIV -->
 <div class="container" style="top:20%;width:90%;position:relative">
-
+<div class="row">
 	<div class="col-sm-8">
       
 		<div class="row" style="width:90%">
@@ -90,13 +102,13 @@
 	
     <div class="col-sm-4">    
 		<div class="row" >
-			<iframe id="myIframe" style="width:100%;position:relative;left:0%;"></iframe>
+			<iframe id="myIframe" style="border:1px solid lightgrey;width:100%;position:relative;left:0%;"></iframe>
 		</div>
 		<br>
 		
 		<div class="row page-header">
-			<div class="col-sm-8"><h4>Contact Information:</h4></div>
-			<div class="col-sm-4" style="text-align:center"><button class="btn-block chat-button">CHAT </button></div>
+			<div class="col-sm-12"><h4>Organiser Contact Info:</h4></div>
+			<!--<div class="col-sm-4" style="text-align:center"><button class="btn-block chat-button">CHAT </button></div>-->
 		</div>
 		<div class="row">
 			<div class="col-sm-6"><h5 id="created_by"></h5></div>
@@ -109,32 +121,61 @@
 	
 			<div class="col-sm-6"><h5>812555555</h5></div>
 		</div><br>
+					<div class="row"><div class="col-sm-12" style="text-align:center"><button class="btn-block chat-button">Chat </button></div></div>
+
+		<br>
 		
 	</div>
-
+</div>
 </div>
 <br><br><br><br><br>
 
-<!-- <!FOOTER DIV> -->
 
+<div class="container-fluid fancy" style="text-align:center;top:20%;height:auto;position:relative;background-color:lightgrey !important;color:">
+<div class="row" style="background-color:;">
+	<div class="col-sm-4">
+	<div class="row"><div class="col-sm-12"><h4 style="color:#AE0D0D;">Hoosier Events</h4></div></div>
+		<div class="row" style="text-align:center;"><div class="col-sm-12">Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</div></div>
+	<br>
+	</div>
+	<div class="col-sm-4 links" style="color:#AE0D0D;"><div class="row"><div class="col-sm-12"><h4>Useful Links</h4></div></div>
+		
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">Your Account</a></div></div>
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">About us</a></div></div>
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">Help</a></div></div>
+		<br>
+	</div>
+	
+	<div class="col-sm-4"><div class="row"><div class="col-sm-12"><h4 style="color:#AE0D0D;">Contact Us</h4></div></div>
+				            <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
+							<br>
+				            <i class="fa fa-envelope mr-3"></i>&nbsp info@example.com
+							<br>
+							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88
+
+
+	</div>
+</div>
+</div>
+
+<!-- <!FOOTER DIV> -->
+<!--
 <div class="container-fluid footer">
 <div class="row" style="background-color:#AE1616; color:black">
 <div class="col-sm-3"><h5>Get Connected with us on Social Media</h5></div>
 <div class="col-sm-6"></div>
 <div class="col-sm-3">
 <div class="row" style="text-align:center">
-<!-- Facebook -->	<div class="col-sm-3">
+	<div class="col-sm-3">
 		            <a id="socialmedialink" href="#" class="fb-ic">
 		              <i class="fa fa-facebook white-text mr-4"> </i>
 		            </a>
 					</div>
-		            <!-- Twitter -->
 					<div class="col-sm-3">
 		            <a id="socialmedialink" href="#" class="tw-ic">
 		              <i class="fa fa-twitter white-text mr-4"> </i>
 		            </a>
 					</div>
-		            <!-- Google +-->
 					<div class="col-sm-3">
 		            <a id="socialmedialink" href="#" class="gplus-ic">
 		              <i class="fa fa-google-plus white-text mr-4"> </i>
@@ -167,7 +208,7 @@
 
 	</div>
 </div>
-</div>
+</div>-->
 
 
 
