--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -26,14 +26,15 @@
 
 <div class="container-fluid" style="background-color:;color:orange;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
-<div class="col-sm-2"><h4 style="color:orange;background-color:white;text-align:center">HoosierEvents</h4></div>
+<div class="col-sm-2"><h4 style="color:orange;background-color:white;text-align:center;font-size:3vw;">HoosierEvents</h4></div>
 <!--<div class="col-sm-3"><image src="logo 4.jpg" style="min-width:350px;max-width:300px;max-height:25px;></div>-->
 <div class="col-sm-1"><button class="btn-default xyz" style="color:orange;background-color:white;border:0px;" onclick="javascript:alert('Hello World!')"><h5>Explore</h5></button></div>
 <div class="col-sm-5"><input type="text" class="form-control" id="myInput" placeholder="Search"></div>
-<div class="col-sm-3"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
+<div class="col-sm-2"><button id="myBtn" style="display:none;" onclick="javascript:alert('Hello World!')"></button></div>
 <div class="col-sm-1"><button class="btn-default xyz" style="color:orange;background-color:white;border:0px;"><h5>Login</h5></button></div>
 </div>
 </div>
+
 <!-- NAVIGATION BAR -->
 <!--<nav class="navbar navbar-inverse" style="background-color:#AE1616;width:100%" >
   <div class="container-fluid" style="text-align:left">
@@ -53,14 +54,16 @@
 
 	</div>
 </nav>-->
-
+	
+	
 <div class="container-fluid" style="background-color:lightgrey;">	
 <div class="container" style="width:90%;top:10%;position:relative;background-color:;-bottom:0.5px groove #F4EFFE">
 <div class="row">
 	<!-- IMAGE DIV -->
 	<div class="col-sm-8">
 		<div class="row">
-		<img id="eventimg" src="" class="" style="width:100%;height:auto;">
+		<!--<img src="/Users/harishmaruthi/eclipse-workspace/hoosier-events/upload-dir/theatre%202.jpg" id="eventimg" class="" style="width:100%;height:auto;">-->
+		<img src="concert.jpg" id="eventimg" class="" style="width:100%;height:auto;">
 		</div>
 	</div>
 <br>
@@ -75,6 +78,7 @@
 		<br><br><br>
 		</div>
 		<div class="row" style="bottom:10%;position:relative"><div class="col-sm-12"><button class="btn-block register_button" onClick="NewPage()"><h5>REGISTER<h5></button></div></div>
+
 	</div>
 
 </div>	
@@ -96,29 +100,31 @@
     </div>
 		<br><br><br>
 	
-    <div class="col-sm-4">    
+    <div class="col-sm-4" style="border-left:0.5px solid lightgrey">    
 		<div class="row" >
-			<iframe id="myIframe" style="border:1px solid lightgrey;width:100%;position:relative;left:0%;"></iframe>
+			<div class="col-sm-12"><iframe id="myIframe" style="border:1px solid lightgrey;width:100%;position:relative;left:0%;"></iframe></div>
 		</div>
 		<br>
 		
 		<div class="row page-header">
 			<div class="col-sm-12"><h4>Organiser Contact Info:</h4></div>
+			<!--<div class="col-sm-4" style="text-align:center"><button class="btn-block chat-button">CHAT </button></div>-->
 		</div>
 		<div class="row">
 			<div class="col-sm-6"><h5 id="created_by"></h5></div>
 		</div>
 		
 		<div class="row">
-			<div class="col-sm-6"><h5>event@corp.com</h5></div>
-
-		
+			<div class="col-sm-12"><h5>event@corp.com</h5></div>
+		</div>
+		<div class="row">
 	
-			<div class="col-sm-6"><h5>812555555</h5></div>
+			<div class="col-sm-12"><h5>812555555</h5></div>
 		</div><br>
-		<div class="row"><div class="col-sm-12" style="text-align:center"><button class="btn-block chat-button">Chat </button></div></div>
+					<div class="row"><div class="col-sm-12" style="text-align:center"><button class="btn-block chat-button">Chat </button></div></div>
 
 		<br>
+		
 	</div>
 </div>
 </div>
@@ -150,65 +156,14 @@
 
 	</div>
 </div>
-
 </div>
-<br><br><br><br><br>
-
-<!-- <!FOOTER DIV> -->
-
-<div class="container-fluid footer">
-<div class="row" style="background-color:#AE1616; color:black">
-<div class="col-sm-3"><h5>Get Connected with us on Social Media</h5></div>
-<div class="col-sm-6"></div>
-<div class="col-sm-3">
-<div class="row" style="text-align:center">
-<!-- Facebook -->	<div class="col-sm-3">
-		            <a id="socialmedialink" href="#" class="fb-ic">
-		              <i class="fa fa-facebook white-text mr-4"> </i>
-		            </a>
-					</div>
-		            <!-- Twitter -->
-					<div class="col-sm-3">
-		            <a id="socialmedialink" href="#" class="tw-ic">
-		              <i class="fa fa-twitter white-text mr-4"> </i>
-		            </a>
-					</div>
-		            <!-- Google +-->
-					<div class="col-sm-3">
-		            <a id="socialmedialink" href="#" class="gplus-ic">
-		              <i class="fa fa-google-plus white-text mr-4"> </i>
-		            </a>
-					</div>
-</div>
-</div>
-</div>
-<div class="row">
-	<div class="col-sm-4">
-	<div class="row"><h5><b>Hoosier Events</b></h5></div>
-		<div class="row">Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</div>
-	<br>
-	</div>
-	<div class="col-sm-4 links" style="color:white"><h5><b>Useful Links</b></h5>
-		
-		<div class="row"><a href="" style="color:#48A2BD">Your Account</a></div>
-		<div class="row"><a href="" style="color:#48A2BD">About us</a></div>
-		<div class="row"><a href="" style="color:#48A2BD">Help</a></div>
-		<br>
-	</div>
-	
-	<div class="col-sm-4"><h5><b>Contact Us</b></h5>
-				            <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
-							<br>
-				            <i class="fa fa-envelope mr-3"></i>&nbsp info@example.com
-							<br>
-							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88
 
 
-	</div>
-</div>
-</div>
+
+
 
 <script>
+
 var event_id=11;
 $(document).ready(function(){
 	$.ajax({
@@ -217,9 +172,22 @@ $(document).ready(function(){
 	data: {id:event_id},
 	url:"/getEvent",
 	  success: function(data) {
-		  
 			console.log('success',data);
-			document.getElementById("eventimg").src='/getImage?img='+ data.image;
+			
+			$.ajax({
+				type:'GET',
+				dataType:'image/jpg',
+				data: {img: data.image},
+				url:"/getImage",
+				  success: function(img) {
+						//document.getElementById("eventimg").src=img;
+				  },
+				  error:function(exception){
+					  //document.getElementById("eventimg").src=exception.responseText.toString().replace(/['"]+/g, '');
+					  }
+			});
+			
+			//debugger;
 			document.getElementById("event_title").innerHTML=data.eventTitle;
 			document.getElementById("event_date").innerHTML=data.startDate;
 			document.getElementById("event_location").innerHTML=data.location;
